[tool.poetry]
name = "lifts"
version = "0.1.0"
description = "Lift simulation programming game"
authors = ["Michał Poręba <michalporeba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
